[package]
name = "pwmn"
version = "0.1.0"
edition = "2024"

[dependencies]
# Crypto
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"

# Security
zeroize = { version = "1.7", features = ["derive"] }
secrecy = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"  # MessagePack

# Data types
uuid = { version = "1.6", features = ["v4", "serde"] }
bincode = { version = "2.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# CLI/UX
rustyline = "14.0"      # Interactive shell
rpassword = "7.3"       # Password prompts
copypasta = "0.10"      # Clipboard

# Utilities
anyhow = "1.0"          # Error handling
hex = "0.4.3"
rand_chacha = "0.9.0"
rand_core = "0.9.3"
serde_json = "1.0.145"
dirs = "6.0.0"
